--- a/rtl/orpsoc/bootrom/Makefile
+++ b/rtl/orpsoc/bootrom/Makefile
@@ -6,6 +6,11 @@ CC = or1k-linux-gnu-gcc
 LD = or1k-linux-gnu-ld
 OBJCOPY = or1k-linux-gnu-objcopy
 
+all: bootrom.v sim.elf
+
+clean:
+	rm -f *.o *.elf bootrom.v bin2vlogarray
+
 .o: %.S
 	$(CC) -c $< -o $@
 
@@ -18,3 +23,8 @@ sim.elf: simboot.o $(BOOTROM_DEPS)
 bootrom.bin: bootrom.elf
 	$(OBJCOPY) -O binary $< $@
 
+bin2vlogarray: bin2vlogarray.c
+	gcc -o $@ $<
+
+bootrom.v: bootrom.bin bin2vlogarray
+	./bin2vlogarray < bootrom.bin | tail -n+65 > $@
