Added compile timestamp in bootloader output

--- a/rtl/orpsoc/bootrom/Makefile
+++ b/rtl/orpsoc/bootrom/Makefile
@@ -5,14 +5,15 @@ BOOTROM_DEPS = loader.o uart.o $(FLASH_BACKEND)
 CC = or1k-linux-gnu-gcc
 LD = or1k-linux-gnu-ld
 OBJCOPY = or1k-linux-gnu-objcopy
+STAMP = $(shell date +'%Y-%m-%d %H:%M')
 
 all: bootrom.v sim.elf
 
 clean:
 	rm -f *.o *.elf bootrom.v bin2vlogarray
 
-.o: %.S
-	$(CC) -c $< -o $@
+%.o: %.S
+	$(CC) -c $< -o $@ -DTIMESTAMP="\"$(STAMP)\""
 
 bootrom.elf: $(BOOTROM_DEPS)
 	$(LD) -T bootrom.ld $^ -o $@
