--- a/rtl/orpsoc/Makefile
+++ b/rtl/orpsoc/Makefile
@@ -15,6 +15,9 @@ VERILATOR_INCLUDE = \
 	-I/home/bluecmd/.cache/fusesoc/uart16550/rtl/verilog \
 	-I/home/bluecmd/.cache/fusesoc/verilog-arbiter/src/
 
+DEPS = bench/testbench.sv bench/testbench.cpp include/wb_intercon.v \
+			 bootrom/bootrom.v
+
 .PHONY: obj_dir/Vtestbench
 
 all: obj_dir/Vtestbench
@@ -22,7 +25,10 @@ all: obj_dir/Vtestbench
 include/wb_intercon.v: include/wb_intercon.conf
 	../orpsoc-cores/cores/wb_intercon/sw/wb_intercon_gen $< $@
 
-obj_dir/Vtestbench: bench/testbench.sv bench/testbench.cpp include/wb_intercon.v
+bootrom/bootrom.v: bootrom/*.S
+	make -C bootrom bootrom.v
+
+obj_dir/Vtestbench: $(DEPS)
 	 verilator $(VERILATOR_FLAGS) -cc bench/testbench.sv --top-module testbench \
 		 --exe bench/testbench.cpp $(VERILATOR_INCLUDE) 
 	 make -C obj_dir -f Vtestbench.mk Vtestbench CXXFLAGS=$(CXXFLAGS)
