Bootloader improvements and QSFP I2C
Added system RAM to be able to execute bringup test applications before
DDR3 is available.

Added 2x I2C controllers for QSFP+ management interface.

Unwound the bootloader a bit and made the skeleton BPI interface output
a sizeword for debugging.

--- a/rtl/orpsoc/Makefile
+++ b/rtl/orpsoc/Makefile
@@ -7,13 +7,15 @@ VERILATOR_INCLUDE = \
 	-I${PWD}/../orpsoc-cores/cores/elf-loader \
 	-I${PWD}/../orpsoc-cores/cores/verilog_utils \
 	-I${PWD}/../orpsoc-cores/cores/wb_intercon \
+	-I${PWD}/../orpsoc-cores/cores/ram_wb \
 	-I${PWD}/../utils \
 	-I${PWD}/bench \
 	-I${PWD}/bootrom \
 	-I/home/bluecmd/.cache/fusesoc/adv_debug_sys/rtl/verilog \
 	-I/home/bluecmd/.cache/fusesoc/jtag_tap/rtl/verilog \
 	-I/home/bluecmd/.cache/fusesoc/uart16550/rtl/verilog \
-	-I/home/bluecmd/.cache/fusesoc/verilog-arbiter/src/
+	-I/home/bluecmd/.cache/fusesoc/verilog-arbiter/src \
+	-I/home/bluecmd/.cache/fusesoc/i2c
 
 DEPS = bench/testbench.sv bench/testbench.cpp include/wb_intercon.v \
 			 bootrom/bootrom.v
