--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -2,17 +2,29 @@
 [master or1k_i]
 slaves =
  rom0
+ sysram
 
 ; or1k data bus master
 [master or1k_d]
 slaves =
  rom0
  uart0
+ sysram
+ qsfp_i2c0
+ qsfp_i2c1
 
 ; debug master
 [master dbg]
 slaves =
+ rom0
  uart0
+ sysram
+ qsfp_i2c0
+ qsfp_i2c1
+
+[slave sysram]
+offset=0x0
+size=0x10000
 
 [slave uart0]
 datawidth=8
@@ -22,3 +34,13 @@ size=32
 [slave rom0]
 offset=0xf0000000
 size=0x1000
+
+[slave qsfp_i2c0]
+datawidth=8
+offset=0xe0000000
+size=8
+
+[slave qsfp_i2c1]
+datawidth=8
+offset=0xe0010000
+size=8
