Replaced source C utilities with python ones
elf2binsizeword: Takes an elf, converts it to binary and replaces the
first word with the file size. Used for bootloader payloads.

elf2vlogarray: Takes and elf, converts it to binary and outputs it in
Verilog case format. Used for wb_rom.

bin2memh: Takes a binary file and output a memh readable file. Used
for the Verilator testbench.

--- a/src/diag/Makefile
+++ b/src/diag/Makefile
@@ -3,7 +3,7 @@ OBJCOPY=or1k-elf-objcopy
 LDLAGS=mexiko.S
 CFLAGS=-DTIMESTAMP="\"$(shell date +'%Y-%m-%d %H:%M')\""
 
-all: diag.binsize
+all: diag.bsw
 
 clean:
 	rm -f diag.bin diag.binsize diag.elf bin2binsizeword
@@ -11,11 +11,5 @@ clean:
 diag.elf: main.c test.c memory.c mexiko.S mexiko.h diag.h
 	$(CC) $^ -o $@ $(CFLAGS)
 
-diag.bin: diag.elf
-	$(OBJCOPY) -O binary $< $@
-
-diag.binsize: diag.bin bin2binsizeword
-	./bin2binsizeword diag.bin $@
-
-bin2binsizeword: ../utils/bin2binsizeword.c
-	gcc -o $@ $<
+diag.bsw: diag.elf
+	../utils/elf2binsizeword $< > $@
