--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -8,6 +8,7 @@ slaves =
 [master or1k_d]
 slaves =
  rom0
+ bpi0
  uart0
  sysram
  qsfp_i2c0
@@ -17,6 +18,7 @@ slaves =
 [master dbg]
 slaves =
  rom0
+ bpi0
  uart0
  sysram
  qsfp_i2c0
@@ -24,7 +26,7 @@ slaves =
 
 [slave sysram]
 offset=0x0
-size=0x10000
+size=0x40000
 
 [slave uart0]
 datawidth=8
@@ -44,3 +46,7 @@ size=8
 datawidth=8
 offset=0xe0010000
 size=8
+
+[slave bpi0]
+offset=0xee000000
+size=0x2000000
