BPI renamed to G18 Flash. Added wb_g18 and made bootloader use it

--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -8,7 +8,7 @@ slaves =
 [master or1k_d]
 slaves =
  rom0
- bpi0
+ g18
  uart0
  sysram
  qsfp_i2c0
@@ -18,7 +18,7 @@ slaves =
 [master dbg]
 slaves =
  rom0
- bpi0
+ g18
  uart0
  sysram
  qsfp_i2c0
@@ -26,27 +26,28 @@ slaves =
 
 [slave sysram]
 offset=0x0
-size=0x40000
+; reserved up to 2 GiB (0x80000000)
+size=0x40000000
 
 [slave uart0]
 datawidth=8
-offset=0x90000000
+offset=0xe0000000
 size=32
-
-[slave rom0]
-offset=0xf0000000
-size=0x1000
 
 [slave qsfp_i2c0]
 datawidth=8
-offset=0xe0000000
+offset=0xe0000100
 size=8
 
 [slave qsfp_i2c1]
 datawidth=8
-offset=0xe0010000
+offset=0xe0000200
 size=8
 
-[slave bpi0]
-offset=0xee000000
-size=0x2000000
+[slave g18]
+offset=0xec000000
+size=0x4000000
+
+[slave rom0]
+offset=0xf0000000
+size=0x1000
