--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -45,8 +45,8 @@ offset=0xe0000200
 size=8
 
 [slave g18]
-offset=0xec000000
-size=0x4000000
+offset=0xee000000
+size=0x2000000
 
 [slave rom0]
 offset=0xf0000000
