--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,21 @@
 
-all: g18.memh
+.PHONY: diag/diag.bsw
+
+all: mexiko.memh mexiko.bin
 
 clean:
-	rm -f bpi.memh
+	rm -f mexiko.memh mexiko.bin
 	rm -f diag/diag.bsw
 
 diag/diag.bsw:
 	make -C diag diag.bsw
 
-g18.memh: diag/diag.bsw
+mexiko.memh: diag/diag.bsw
 	# TODO(bluecmd): This is supposed to be u-boot instead
-	utils/bin2memh diag/diag.bsw > $@
-	# Place diag image at 0x1f00000 (/2 = 0xf80000)
-	echo "@f80000" >> $@
+	#utils/bin2memh diag/diag.bsw > $@
+	echo "@800000" >> $@
 	utils/bin2memh diag/diag.bsw >> $@
 
+mexiko.bin: diag/diag.bsw
+	dd if=/dev/zero bs=64k count=256 of=$@
+	cat diag/diag.bsw >> $@
