Cramed in a RAM read-back checksum test.
Moved around some stuff and started to use some less tidy ASM
to make everything fit. Broke away rom.S abstraction and moved
UART functions to uart.S.

Checksum changed to be CKSUM = (ADDR+4) ^ DATA

--- a/src/bootrom/Makefile
+++ b/src/bootrom/Makefile
@@ -1,6 +1,4 @@
-
-FLASH_BACKEND = rom.o
-BOOTROM_DEPS = loader.o uart.o $(FLASH_BACKEND)
+BOOTROM_DEPS = loader.o uart.o
 STAMP = $(shell date +'%Y-%m-%d %H:%M')
 
 CC = or1k-elf-gcc
