Fixed typo in bootloader, added simple dummy program

--- a/src/diag/Makefile
+++ b/src/diag/Makefile
@@ -3,7 +3,7 @@ OBJCOPY=or1k-elf-objcopy
 LDLAGS=mexiko.S
 CFLAGS=-DTIMESTAMP="\"$(shell date +'%Y-%m-%d %H:%M')\""
 
-all: diag.bsw
+all: diag.bsw simple.bsw
 
 clean:
 	rm -f diag.bin diag.binsize diag.elf bin2binsizeword
@@ -11,5 +11,11 @@ clean:
 diag.elf: main.c test.c memory.c mexiko.S mexiko.h diag.h
 	$(CC) $^ -o $@ $(CFLAGS)
 
+simple.elf: simple.c mexiko.S
+	$(CC) $^ -o $@ $(CFLAGS)
+
 diag.bsw: diag.elf
+	../utils/elf2binsizeword $< > $@
+
+simple.bsw: simple.elf
 	../utils/elf2binsizeword $< > $@
