Updated diag program for newlines
We need to print \r\n for newlines. Added some functions to
take care of that - not supernice but I think this allows for
best flexibility for the future.

Updated program.tcl to do the right things. Apparently programming
the MCS "fails" even when it succeeds so the last step is not executed.
Needs investigation.

Currently the design boots and runs the diagnostic just fine,
but due to the RAM address cycle the write test will kill the diag
program.

But it works! WOOO!

--- a/src/diag/Makefile
+++ b/src/diag/Makefile
@@ -6,7 +6,7 @@ CFLAGS=-DTIMESTAMP="\"$(shell date +'%Y-%m-%d %H:%M')\""
 all: diag.bsw simple.bsw
 
 clean:
-	rm -f diag.bin diag.binsize diag.elf bin2binsizeword
+	rm -f diag.bsw diag.elf simple.elf simple.bsw
 
 diag.elf: main.c test.c memory.c mexiko.S mexiko.h diag.h
 	$(CC) $^ -o $@ $(CFLAGS)
