Change the flash reservation to 16 MiB total
Turns out the Bitstream is too large and bareboot / diag is much
smaller than I thought they would be. Reduced the max size to 8 MiB
per application.

Also some other updates with regards to diag console and other diag
imporvements.

--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -46,8 +46,8 @@ offset=0xe0000200
 size=8
 
 [slave g18]
-offset=0xee000000
-size=0x2000000
+offset=0xef000000
+size=0x1000000
 
 [slave rom0]
 offset=0xf0000000
