Introducing Gris InterConnect (GIC)
Gris InterConnect (GIC) is a special bus used to bridge the two FPGAs in
the Mexiko platform: mexiko and kuba. Kuba is a peripheral FPGA with
support for SDcard, Management Ethernet (ethmac), RTC (SPI/I2C) and GPIO.

The main features of GIC:
 * Small pin count. It is designed to be used over maximum 8 pins.
 * Simple. It doesn't support DMA or burst transactions for example.

It does support classical bus cycles and IRQ multiplexing.

It works by simply bridging Wishbone over the Gris Line Protocol, acting
as a Wishbone slave on the Gris Master side and as a Wishbone master on
the Gris Slave side. Gris is a  point-to-point protocol and transactions
must be initiated by the Gris Master.

This commit temporary moves the G18 flash to Kuba to test the
implementation. It also reserves 0xe0 - 0xe8 in the address space for
Kuba, which means that UART and SPIs have been moved to start @ 0xe8.

See gic_master.v for TODO. The GIC IO driver is not part of this commit
but will follow later.

--- a/rtl/orpsoc/include/wb_intercon.conf
+++ b/rtl/orpsoc/include/wb_intercon.conf
@@ -8,6 +8,7 @@ slaves =
 [master or1k_d]
 slaves =
  rom0
+ gic0
  g18
  uart0
  sysram
@@ -18,6 +19,7 @@ slaves =
 [master dbg]
 slaves =
  rom0
+ gic0
  g18
  uart0
  sysram
@@ -30,19 +32,23 @@ offset=0x0
 ; reserved up to 2 GiB (0x80000000)
 size=0x40000000
 
+[slave gic0]
+offset=0xe0000000
+size=0x8000000
+
 [slave uart0]
 datawidth=8
-offset=0xe0000000
+offset=0xe8000000
 size=32
 
 [slave qsfp_i2c0]
 datawidth=8
-offset=0xe0000100
+offset=0xe8000100
 size=8
 
 [slave qsfp_i2c1]
 datawidth=8
-offset=0xe0000200
+offset=0xe8000200
 size=8
 
 [slave g18]
