--- a/src/utils/or1ksim.cfg
+++ b/src/utils/or1ksim.cfg
@@ -110,7 +110,7 @@ end
 
 section uart
   enabled = 1
-  baseaddr = 0xe0000000
+  baseaddr = 0xe8000000
   irq = 2
   channel = "tcp:1200"
   jitter = -1                     /* async behaviour */
@@ -122,13 +122,25 @@ section dma
 end
 
 section ethernet
-  enabled = 0
-  baseaddr = 0x92000000
-  /* dma = 0 */
+  enabled = 1
+  baseaddr = 0xe0000000
   irq = 4
   rtx_type = "tap"
   tap_dev = "TAP_DEVICE"
-  random_mac = 1
+end
+
+section memory
+  pattern = 0x00
+  type = unknown /* Fastest */
+
+  name = "RAM"
+  ce = 1
+  mc = 0
+  baseaddr = 0xe0008000
+  size = 0x8000
+  /* GIC adds about 100 cycles of latency for a read cycle */
+  delayr = 100
+  delayw = 1
 end
 
 section gpio
