--- a/src/utils/or1ksim.cfg
+++ b/src/utils/or1ksim.cfg
@@ -126,7 +126,7 @@ section ethernet
   baseaddr = 0xe0000000
   irq = 4
   rtx_type = "tap"
-  tap_dev = "TAP_DEVICE"
+  tap_dev = "tap0"
 end
 
 section memory
