--- a/rtl/kuba/include/wb_intercon_kuba.conf
+++ b/rtl/kuba/include/wb_intercon_kuba.conf
@@ -2,20 +2,23 @@
 slaves =
  eth0
  rtc_spi
- g18
+ expram
 ; TODO(bluecmd): sdcard / MMC core
 ; TODO(bluecmd): gpio
 
+[master eth0_master]
+slaves =
+ expram
+
 [slave eth0]
-offset=0xe0100000
+offset=0xe0000000
 size=4096
 
 [slave rtc_spi]
 datawidth=8
-offset=0xe0000100
+offset=0xe0100000
 size=8
 
-; TODO(bluecmd): This is just here to make tests easier
-[slave g18]
-offset=0xe7000000
-size=0x1000000
+[slave expram]
+offset=0xe0008000
+size=0x8000
